# Picat

./: CMakeLists.txt  INSTALL  README.md
emu/: CMakeLists.txt  arith.c  assert_bp.c  basic.h  bigint.c  builtins.c  cfd.c  clause.c  clpfd.c  clpfd_libs.c  cpreds.c  debug.c  delay.c  dis.c  domain.c  emu_inst.h  espresso_bp.c  event.c  expand_bp.c  extern_decl.h  file.c  findall.c  float1.c  gcheap.c  gcqueue.c  gcstack.c  getline.c  getline.h  global.c  glpk_bp.c  init.c  init_sym.c  kapi.c  loader.c  main.c  mic.c  numbervars.c  picat_bc.h  sapi.c  sat_bp.c  (+6 more)
emu/espresso/: CMakeLists.txt  cofactor.c  espresso_expand.c  signature.c  signature.h
emu/kissat/src/: CMakeLists.txt
